# click_models

./: CMakeLists.txt
ClickModels/: CMakeLists.txt  counters.cpp  counters.h  day_data.cpp  day_data.h  main.cpp  tester.hpp  utils.h  uumap.cpp  uumap.h
ClickModels/embeddings/: Embedding.cpp  Embedding.h  MyLearner.cpp  MyLearner.h  Token.cpp  Token.h  baseline.cpp  baseline.h  collaborative_filtering.cpp  collaborative_filtering.h  embbedingbydays.cpp  embbedingbydays.h  filters.cpp  filters.h  main.cpp  main.cpp.orig  mergecf_ubm.cpp  mergecf_ubm.h  newmodel.cpp  newmodel.h  our_similarity.cpp  our_similarity.h  pairspreperation.cpp  pairspreperation.h  pairwaislearning.cpp  pairwaislearning.h  personalizedclickmodel.cpp  personalizedclickmodel.h  ubm.cpp  ubm.h
ClickModels/strategies/: strategy0.cpp  strategy0.h
CollaborativeFiltering/: CMakeLists.txt  collaborative_filtering.cpp  collaborative_filtering.h  embedding.cpp  embedding.h  learner.cpp  learner.h  macro_parameters.h  main.cpp
FileManager/: BinaryReader.hpp  BinaryWriter.hpp  CMakeLists.txt  FileReader.h  FileStreamIdentifier.h  FileWriter.h  ReadConverter.h  main.cpp
Optimization/: CMakeLists.txt  SimpleFunction.h
Optimization/EventHandler/: ICallable.h
Optimization/Optimizer/: IOptimizable.h  LBFGS.h
Tools/: CMakeLists.txt  CrossPlatformHeader.h  DataFunctors.h  Exceptions.h  Tools.h  main.cpp
Tools/Containers/: Alphabet.cpp  Alphabet.h  ContainerConverters.hpp  ContainerEraser.h  ContainerGenerators.hpp  ContainerInserter.h  ContainerSearcher.hpp  ContainerSorter.hpp  ContainerTools.h  Document.cpp  Document.h  FixedHashMap.h  LinearHashFunction.h  NgramStorage.h  SparseVector.cpp  SparseVector.h  TernarySearchTree.h  Trie.h  TypeTraits.h
Tools/IO/: BinaryIO.h  ConsoleTools.h
Tools/Locale/: Language.h  LocaleSettings.hpp  RussianLocale.h  ToolsCyrillicSymbols.h
Tools/Math/: MatrixTools.h  TableCalculator.hpp
Tools/OS/: FixedSizeConnecter.hpp  FloatSizeConnecter.hpp  OS.h  ProcessClient.hpp  ProcessServer.hpp  time-calc.cpp  time-calc.h
Tools/Strings/: AhoCorasickParser.hpp  LinguisticTools.h  Splitter.h  StringConvertions.h  StringTools.h
data_parser/: parser.py
learnBaseline/: run.py
learnBaseline/scripts/: prepair_users.py  utils.py
scripts/: utils.py
